--- a/i3/config
+++ b/i3/config
@@ -10,7 +10,14 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 
-set $mod Mod4
+# Windows key
+# set $mod Mod4 
+
+# Alt key
+set $mod Mod1 
+
+# Refresh rate
+exec xrandr --output HDMI-0 --off && xrandr --output DP-4 --off && xrandr --output DP-2 --primary --mode 1920x1080 --rate 239.76
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -47,7 +54,7 @@ floating_modifier $mod
 
 # move tiling windows via drag & drop by left-clicking into the title bar,
 # or left-clicking anywhere into the window while holding the floating modifier.
-tiling_drag modifier titlebar
+# tiling_drag modifier titlebar
 
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
@@ -70,10 +77,10 @@ bindsym $mod+k focus up
 bindsym $mod+l focus right
 
 # alternatively, you can use the cursor keys:
-bindsym $mod+h focus left
-bindsym $mod+j focus down
-bindsym $mod+k focus up
-bindsym $mod+l focus right
+# bindsym $mod+h focus left
+# bindsym $mod+j focus down
+# bindsym $mod+k focus up
+# bindsym $mod+l focus right
 
 # move focused window
 bindsym $mod+Shift+h move left
