New i3 monitor setup, trying to load gnome theme settings

--- a/i3/config
+++ b/i3/config
@@ -17,7 +17,12 @@
 set $mod Mod1 
 
 # Refresh rate
-exec xrandr --output HDMI-0 --off && xrandr --output DP-4 --off && xrandr --output DP-2 --primary --mode 1920x1080 --rate 239.76
+exec xrandr --output DP-2 --primary --mode 1920x1080 --rate 239.76 --pos 2560x1021 
+exec xrandr --output HDMI-0 --mode 1920x1080 --rate 60 --pos 2560x0 
+exec xrandr --output DP-4 --mode 2560x1440 --right-of DP-2 --rate 165 --pos 4480x737
+
+# Load theme config from Gnome
+exec --no-startup-id /usr/lib/gsd-xsettings
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
