--- a/i3/config
+++ b/i3/config
@@ -19,7 +19,12 @@ set $mod Mod1
 # Refresh rate
 exec xrandr --output DP-2 --primary --mode 1920x1080 --rate 239.76 --pos 0x1080 && \
 xrandr --output HDMI-0 --mode 1920x1080 --rate 60 --pos 0x0 && \
-xrandr --output DP-4 --mode 2560x1440 --rate 165 --pos 1920x848
+xrandr --output DP-4 --mode 2560x1440 --rate 165 --pos 1920x1139
+
+# Media volume controls
+bindsym XF86AudioMute exec amixer sset 'Master' toggle
+bindsym XF86AudioLowerVolume exec amixer sset 'Master' 5%-
+bindsym XF86AudioRaiseVolume exec amixer sset 'Master' 5%+
 
 # Load theme config from Gnome
 exec --no-startup-id /usr/lib/gsd-xsettings
@@ -46,13 +51,6 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
-
-# Use pactl to adjust volume in PulseAudio.
-set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
