Reinstalled barbar, uninstalled the old popup / fancy command line plugin - Looking for another way to move command line

--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -6,6 +6,7 @@ transparent_background_colors = true
 [font]
 normal = {family = "Cousine Nerd Font"}
 offset = {x = 0, y = 4}
+size = 10
 
 [keyboard]
 bindings = [
